# game-of-life

./: CMakeLists.txt  GoL  README.md  README.txt  clean.sh  compile.sh
include/glad/: glad.h
src/: glad.c  graphics.cpp  graphics.h  grid.cpp  grid.h  main.cpp  utils.cpp  utils.h
